deploymant.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nfiitest
  name: nfiitest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nfiitest
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nfiitest
    spec:
      containers:
      - image: quay.io/redhatworkshops/bgd:latest
        name: nfiitest
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: v1
      volumes:
      - name: v1
        persistentVolumeClaim:
         claimName: demo
---
